<resources>
    <string name="app_name">HopeRun</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings_0">登陆信息</string>
    <string name="action_settings_1">查看登陆信息</string>
    <string name="action_settings_2">修改/清除信息</string>
    <string name="action_settings_3">定时提醒</string>
    <string name="action_settings_4">自动打卡</string>
    <string name="action_settings_5">注销/退出</string>
    <string name="action_settings_6">登 陆</string>
</resources>
