<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings_0"
        android:orderInCategory="100"
        android:title="@string/action_settings_0"
        app:showAsAction="never"
        >
        <menu>
            <item
                android:id="@+id/action_settings_1"
                android:orderInCategory="100"
                android:title="@string/action_settings_1"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_settings_2"
                android:orderInCategory="100"
                android:title="@string/action_settings_2"
                app:showAsAction="never" />

        </menu>
    </item>

    <group android:checkableBehavior="all">
    <item
        android:id="@+id/action_settings_3"
        android:orderInCategory="100"
        android:title="@string/action_settings_3"
        app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/action_settings_4"
        android:orderInCategory="100"
        android:title="@string/action_settings_4"
        app:showAsAction="never"
        >
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    <item
        android:id="@+id/action_settings_5"
        android:orderInCategory="100"
        android:title="@string/action_settings_5"
        app:showAsAction="never" />

</menu>
